# Computer-Graphics

./: .gitignore  README.md
Submission/Lab2 - Raytracing/src/: raytracing.cpp
Submission/Lab3 - Rasterisation/src/: Rasterisation.cpp  Rasterisation_interpolation.cpp  TestModel.h
common/include/: CMakeLists.txt  SDLauxiliary.h
rasterisation/latex/: content.tex  rapport.tex
rasterisation/rasterisation/: Rasterisation.cpp  rasterisation.sln
rasterisation/rasterisation/rasterisation/: rasterisation.vcxproj  rasterisation.vcxproj.filters
raytracing/: notes.txt
raytracing/latex/: content.tex  part1.tex  part2.tex  rapport.tex  references.bib  report.sty  title.tex
raytracing/raytracing/: raytracing.sln
raytracing/raytracing/raytracing/: Material.h  Multithreading.cpp  Multithreading.h  Object3D.h  RCa06020  Raytracer.h  Raytracing.h  Sphere.h  TestModel.h  Triangle.h  raytracing.cpp  raytracing.rc  raytracing.vcxproj  raytracing.vcxproj.filters
raytracing/resource/: benchmarks.py  benchmarksAA  benchmarksAA.py  benchmarksThreads.py
